<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="1500dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:ems="10"
            android:hint="@string/name"
            android:layout_marginBottom="16dp"
            />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:ems="10"
            android:hint="@string/last_name"
            android:layout_marginBottom="16dp"
            />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/register"
        android:background="@color/black"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btn_goto_login"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/go_to_login"
        android:background="@color/transparent"
        android:layout_marginTop="10dp"
        />

</LinearLayout>